feat(jellyfin): sso

--- a/kubernetes/apps/media/jellyfin/app/externalsecret.yaml
+++ b/kubernetes/apps/media/jellyfin/app/externalsecret.yaml
@@ -3,6 +3,71 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
+  name: jellyfin-sso-config
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: doppler
+  target:
+    name: jellyfin-sso-config
+    template:
+      data:
+        SSO-Auth.xml: |
+          <?xml version="1.0" encoding="utf-8"?>
+          <PluginConfiguration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <SamlConfigs />
+            <OidConfigs>
+              <item>
+                <key>
+                  <string>authelia</string>
+                </key>
+                <value>
+                  <PluginConfiguration>
+                    <OidEndpoint>https://sso.stevewm.dev</OidEndpoint>
+                    <OidClientId>jellyfin</OidClientId>
+                    <OidSecret>{{ .JELLYFIN_OAUTH_CLIENT_SECRET }}</OidSecret>
+                    <Enabled>true</Enabled>
+                    <EnableAuthorization>true</EnableAuthorization>
+                    <EnableAllFolders>true</EnableAllFolders>
+                    <EnabledFolders />
+                    <AdminRoles>
+                      <string>admins</string>
+                    </AdminRoles>
+                    <Roles>
+                      <string>people</string>
+                      <string>admins</string>
+                    </Roles>
+                    <EnableFolderRoles>false</EnableFolderRoles>
+                    <EnableLiveTvRoles>false</EnableLiveTvRoles>
+                    <EnableLiveTv>false</EnableLiveTv>
+                    <EnableLiveTvManagement>false</EnableLiveTvManagement>
+                    <LiveTvRoles />
+                    <LiveTvManagementRoles />
+                    <FolderRoleMappings />
+                    <RoleClaim>groups</RoleClaim>
+                    <OidScopes>
+                      <string>groups</string>
+                    </OidScopes>
+                    <CanonicalLinks></CanonicalLinks>
+                    <DisableHttps>false</DisableHttps>
+                    <DoNotValidateEndpoints>false</DoNotValidateEndpoints>
+                    <DoNotValidateIssuerName>false</DoNotValidateIssuerName>
+                    <SchemeOverride>https</SchemeOverride>
+                  </PluginConfiguration>
+                </value>
+              </item>
+            </OidConfigs>
+          </PluginConfiguration>
+  data:
+    - secretKey: JELLYFIN_OAUTH_CLIENT_SECRET
+      remoteRef:
+        key: JELLYFIN_OAUTH_CLIENT_SECRET
+
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/external-secrets.io/externalsecret_v1.json
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
   name: jellyfin-exporter
 spec:
   secretStoreRef:
