--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -55,3 +55,7 @@ spec:
     - secretKey: ACTUAL_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
         key: ACTUAL_OAUTH_CLIENT_SECRET_DIGEST
+
+    - secretKey: JELLYFIN_OAUTH_CLIENT_SECRET_DIGEST
+      remoteRef:
+        key: JELLYFIN_OAUTH_CLIENT_SECRET_DIGEST
