add secret to authelia

--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -39,6 +39,10 @@ spec:
       remoteRef:
         key: SMTP_RELAY_USERNAME
 
+    - secretKey: DRAGONFLY_PASSWORD
+      remoteRef:
+        key: DRAGONFLY_PASSWORD
+
     # Apps
     - secretKey: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
