feat: deploy ksgate

--- a/kubernetes/apps/downloads/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/recyclarr/app/helmrelease.yaml
@@ -48,6 +48,20 @@ spec:
 
         annotations:
           reloader.stakater.com/auto: "true"
+          k8s.ksgate.org/sonarr: |
+            {
+              "apiVersion": "apps/v1",
+              "kind": "Deployment",
+              "name": "sonarr",
+              "expression": "resource.status.updatedReplicas >= 1"
+            }
+          k8s.ksgate.org/radarr: |
+            {
+              "apiVersion": "apps/v1",
+              "kind": "Deployment",
+              "name": "radarr",
+              "expression": "resource.status.updatedReplicas >= 1"
+            }
 
         pod:
           restartPolicy: Never
