--- a/kubernetes/core/system/ksgate/app/helmrelease.yaml
+++ b/kubernetes/core/system/ksgate/app/helmrelease.yaml
@@ -23,4 +23,9 @@ spec:
     keepHistory: false
   driftDetection:
     mode: warn
-  values: []
+  values:
+    conditionResources:
+      apiGroups:
+        - "apps/v1"
+      resources:
+        - "Deployment"
