--- a/kubernetes/core/network/smtp-relay/app/config/maddy.conf
+++ b/kubernetes/core/network/smtp-relay/app/config/maddy.conf
@@ -25,8 +25,7 @@ target.queue remote_queue {
 
 target.smtp remote_smtp {
     debug {env:DEBUG}
-    attempt_starttls yes
-    require_tls yes
+    starttls yes
     auth plain {env:SMTP_RELAY_USERNAME} {env:SMTP_RELAY_PASSWORD}
-    targets tls://{env:SMTP_RELAY_SERVER}:{env:SMTP_RELAY_SERVER_PORT}
+    targets tcp://{env:SMTP_RELAY_SERVER}:{env:SMTP_RELAY_SERVER_PORT}
 }
