--- a/kubernetes/core/security/glauth/app/config/users.toml
+++ b/kubernetes/core/security/glauth/app/config/users.toml
@@ -19,6 +19,7 @@
 [[users]]
     name = "cl"
     mail = "{{ .GLAUTH_CL_EMAIL }}"
+    givenname = "cl"
     uidnumber = 5002
     primarygroup = 6502
     passbcrypt = "{{ .GLAUTH_CL_PSW_BCRYPT }}"
