fix(authelia): correct groupname

--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -76,7 +76,7 @@ access_control:
     - domain:
         - "*.stevewm.dev"
       policy: one_factor
-      subject: [group:admins, group:users]
+      subject: [group:admins, group:people]
       networks:
         - internal
 
