--- a/kubernetes/apps/selfhosted/actual/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/actual/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: actual
+  name: &app actual
 spec:
   interval: 30m
   maxHistory: 3
@@ -42,7 +42,7 @@ spec:
               repository: ghcr.io/actualbudget/actual-server
               tag: 25.10.0
             env:
-              ACTUAL_PORT: &httpPort 5006
+              ACTUAL_PORT: &port 80
               ACTUAL_OPENID_DISCOVERY_URL: https://sso.stevewm.dev
               ACTUAL_OPENID_CLIENT_ID: actual-budget
               ACTUAL_OPENID_CLIENT_SECRET:
@@ -52,6 +52,7 @@ spec:
                     key: client_secret
               ACTUAL_OPENID_SERVER_HOSTNAME: https://actual.stevewm.dev
               ACTUAL_OPENID_AUTH_METHOD: oauth2
+              # ACTUAL_OPENID_ENFORCE: "true"
             probes:
               liveness:
                 enabled: true
@@ -61,7 +62,7 @@ spec:
                 spec:
                   httpGet:
                     path: /
-                    port: *httpPort
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -77,7 +78,7 @@ spec:
       app:
         ports:
           http:
-            port: *httpPort
+            port: *port
 
     persistence:
       data:
@@ -94,3 +95,8 @@ spec:
           - name: internal
             namespace: network
             sectionName: https
+        annotations:
+          gethomepage.dev/name: *app
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/group: selfhosted
+          gethomepage.dev/icon: actual-budget.png
