--- a/kubernetes/apps/selfhosted/mealie/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/mealie/app/helmrelease.yaml
@@ -102,6 +102,11 @@ spec:
           - name: internal
             namespace: network
             sectionName: https
+        annotations:
+          gethomepage.dev/name: *app
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/group: selfhosted
+          gethomepage.dev/icon: mealie.png
 
     persistence:
       config:
