--- a/kubernetes/apps/selfhosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/karakeep/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: karakeep
+  name: &app karakeep
 spec:
   interval: 30m
   maxHistory: 3
@@ -196,3 +196,8 @@ spec:
           - backendRefs:
               - identifier: app
                 port: *httpPort
+        annotations:
+          gethomepage.dev/name: *app
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/group: selfhosted
+          gethomepage.dev/icon: karakeep.png
