chore: individual dragonfly cluster per app

--- a/kubernetes/core/security/authelia/ks.yaml
+++ b/kubernetes/core/security/authelia/ks.yaml
@@ -25,6 +25,7 @@ spec:
       namespace: network
   components:
     - ../../../../flux/components/postgres
+    - ../../../../flux/components/dragonfly
   postBuild:
     substitute:
       APP: authelia
