--- a/kubernetes/flux/components/dragonfly/externalsecret.yaml
+++ b/kubernetes/flux/components/dragonfly/externalsecret.yaml
@@ -3,14 +3,14 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: dragonfly-auth
+  name: ${APP}-auth
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: doppler
   target:
-    name: dragonfly-auth
+    name: ${APP}-dragonfly
   data:
     - secretKey: password
       remoteRef:
-        key: DRAGONFLY_PASSWORD
+        key: ${APP^^}_DRAGONFLY_PASSWORD
