--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -36,8 +36,8 @@ session:
       authelia_url: https://sso.stevewm.dev
       default_redirection_url: https://home.stevewm.dev
   redis:
-    database_index: 1
-    host: dragonfly.database.svc.cluster.local
+    database_index: 0
+    host: dragonfly-authelia.security.svc.cluster.local
     password: '{{ secret "/config/secret/DRAGONFLY_PASSWORD" }}'
 
 storage:
