--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -93,7 +93,7 @@ spec:
           gethomepage.dev/icon: jellyseerr.png
           gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_JELLYSEERR_API_KEY}}` }}"
           gethomepage.dev/widget.type: *app
-          gethomepage.dev/widget.url: "http://jellyseerr.downloads.svc.cluster.local"
+          gethomepage.dev/widget.url: "http://jellyseerr.media.svc.cluster.local"
 
     persistence:
       config:
