--- a/kubernetes/apps/downloads/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/sonarr/app/helmrelease.yaml
@@ -103,7 +103,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: downloads
-          gethomepage.dev/icon: sonarr.png
+          gethomepage.dev/icon: sh-sonarr-light.png
           gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_SONARR_API_KEY}}` }}"
           gethomepage.dev/widget.type: *app
           gethomepage.dev/widget.url: "http://sonarr.downloads.svc.cluster.local"
