--- a/kubernetes/apps/selfhosted/mealie/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/mealie/app/helmrelease.yaml
@@ -106,7 +106,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: selfhosted
-          gethomepage.dev/icon: mealie.png
+          gethomepage.dev/icon: sh-mealie-light.png
 
     persistence:
       config:
