--- a/kubernetes/apps/downloads/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/radarr/app/helmrelease.yaml
@@ -103,7 +103,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: downloads
-          gethomepage.dev/icon: radarr.png
+          gethomepage.dev/icon: sh-radarr-light.png
           gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_RADARR_API_KEY}}` }}"
           gethomepage.dev/widget.type: *app
           gethomepage.dev/widget.url: "http://radarr.downloads.svc.cluster.local"
