--- a/kubernetes/apps/downloads/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/sabnzbd/app/helmrelease.yaml
@@ -104,7 +104,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: downloads
-          gethomepage.dev/icon: sabnzbd.png
+          gethomepage.dev/icon: sh-sabnzbd-light.png
           gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_SABNZBD_API_KEY}}` }}"
           gethomepage.dev/widget.type: *app
           gethomepage.dev/widget.url: "http://sabnzbd.downloads.svc.cluster.local"
