--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: media
-          gethomepage.dev/icon: jellyseerr.png
+          gethomepage.dev/icon: sh-jellyseerr-light.png
           gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_JELLYSEERR_API_KEY}}` }}"
           gethomepage.dev/widget.type: *app
           gethomepage.dev/widget.url: "http://jellyseerr.media.svc.cluster.local"
