--- a/kubernetes/apps/selfhosted/homepage/app/config.yaml
+++ b/kubernetes/apps/selfhosted/homepage/app/config.yaml
@@ -37,7 +37,7 @@ data:
     ---
     - network:
         - pihole:
-            icon: pi-hole.png
+            icon: sh-pi-hole-light.png
             href: http://lilnas.home.arpa:3001/admin/login
             widget:
               type: pihole
@@ -49,43 +49,57 @@ data:
             icon: asustor.png
             href: https://lilnas.home.arpa:8000
         - portainer:
-            icon: portainer.png
+            icon: sh-portainer-light.png
             href: https://lilnas.home.arpa:19443
 
   settings.yaml: |
     ---
     title: Cluster Home
     theme: dark
-    # Photo credit: https://unsplash.com/@ryan_hutton_
-    background: https://images.unsplash.com/photo-1444080748397-f442aa95c3e5?auto=format&fit=crop&w=2560&q=80
+    color: stone
+    # Photo credit: https://unsplash.com/@adrienolichon
+    # Right click image and "Copy image address" to get direct link
+    background: https://images.unsplash.com/photo-1533135091724-62cc5402aa20?auto=format&fit=crop&w=2560&q=80
 
     logpath: /logs
 
     cardBlur: sm
     disableCollapse: true
     statusStyle: dot
-    headerStyle: clean
-    iconStyle: theme
+    headerStyle: boxed
+    iconStyle: flat
+
+    hideVersion: true
+    disableUpdateCheck: true
 
     layout:
       media:
-        header: false
-        columns: 3
+        icon: mdi-television-classic-#ffffff
+        columns: 2
         style: row
         useEqualHeights: true
       selfhosted:
-        header: false
-        columns: 4
+        icon: mdi-server-#ffffff
         style: row
+        columns: 5
+        useEqualHeights: true
       downloads:
-        header: false
-        columns: 4
+        icon: mdi-download-box-#ffffff
+        columns: 3
         style: row
         useEqualHeights: true
+      home:
+        icon: mdi-home-automation-#ffffff
+      games:
+        icon: mdi-controller-classic-#ffffff
       monitoring:
+        icon: mdi-magnify-#ffffff
       nas:
+        icon: mdi-nas-#ffffff
       network:
+        icon: mdi-lan-connect-#ffffff
       security:
+        icon: mdi-security-#ffffff
 
   widgets.yaml: |
     ---
