--- a/kubernetes/apps/selfhosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/apps/selfhosted/homepage/app/externalsecret.yaml
@@ -41,7 +41,7 @@ spec:
 
     - secretKey: HOMEPAGE_VAR_PIHOLE_API_KEY
       remoteRef:
-        key: PIHOLE_API_KEY
+        key: PIHOLE_PSW
 
     - secretKey: HOMEPAGE_VAR_HOME_LATITUDE
       remoteRef:
