--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -59,3 +59,7 @@ spec:
     - secretKey: JELLYFIN_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
         key: JELLYFIN_OAUTH_CLIENT_SECRET_DIGEST
+
+    - secretKey: ROMM_OAUTH_CLIENT_SECRET_DIGEST
+      remoteRef:
+        key: ROMM_OAUTH_CLIENT_SECRET_DIGEST
