--- a/kubernetes/apps/games/kustomization.yaml
+++ b/kubernetes/apps/games/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: games
 resources:
   - ./minecraft/ks.yaml
+  - ./romm/ks.yaml
   - ./ut2004/ks.yaml
   - ./vintagestory/ks.yaml
 components:
