--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -105,6 +105,10 @@ spec:
               OIDC_PROVIDER: authelia
               OIDC_CLIENT_ID: romm
               OIDC_CLIENT_SECRET:
+                valueFrom:
+                  secretKeyRef:
+                    name: romm
+                    key: ROMM_OAUTH_CLIENT_SECRET
               OIDC_REDIRECT_URI: https://romm.stevewm.dev/api/oauth/openid
               OIDC_SERVER_APPLICATION_URL: https://sso.stevewm.dev
             envFrom:
