--- a/kubernetes/apps/games/romm/app/kustomization.yaml
+++ b/kubernetes/apps/games/romm/app/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
 configMapGenerator:
   - name: romm-config
     files: [./config/config.yml]
+    options:
+      disableNameSuffixHash: true
