--- a/kubernetes/core/system/kustomization.yaml
+++ b/kubernetes/core/system/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./ksgate/ks.yaml
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
+  - ./runo/ks.yaml
 components:
   - ../../flux/components/namespace
 patches:
