--- a/kubernetes/core/system/runo/app/ocirepository.yaml
+++ b/kubernetes/core/system/runo/app/ocirepository.yaml
@@ -9,5 +9,5 @@ spec:
     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
     operation: copy
   ref:
-    tag: v0.2.0
+    tag: 0.2.0
   url: oci://ghcr.io/aljoshare/runo-helm-chart/runo
