--- a/kubernetes/core/system/runo/app/helmrelease.yaml
+++ b/kubernetes/core/system/runo/app/helmrelease.yaml
@@ -23,4 +23,18 @@ spec:
     keepHistory: false
   driftDetection:
     mode: warn
-  values: {}
+  values:
+    securityContext:
+      allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
+      capabilities:
+        drop: [ALL]
+
+    podSecurityContext:
+      runAsNonRoot: true
+      runAsUser: 65534
+      runAsGroup: 65534
+      fsGroup: 65534
+      fsGroupChangePolicy: OnRootMismatch
+      seccompProfile:
+        type: RuntimeDefault
