generate dragonfly secret

--- a/kubernetes/apps/downloads/prowlarr/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/prowlarr/app/externalsecret.yaml
@@ -3,14 +3,14 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: ${APP}-dragonfly
+  name: prowlarr
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: doppler
   target:
-    name: ${APP}-dragonfly
+    name: prowlarr
   data:
-    - secretKey: password
+    - secretKey: api_key
       remoteRef:
-        key: ${APP^^}_DRAGONFLY_PASSWORD
+        key: PROWLARR_API_KEY
