generate more secrets

--- a/kubernetes/apps/games/minecraft/app/kustomization.yaml
+++ b/kubernetes/apps/games/minecraft/app/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
+  - ./secret.yaml
   - ./probe.yaml
 configMapGenerator:
   - name: minecraft-bluemap
