--- a/kubernetes/apps/games/minecraft/app/helmrelease.yaml
+++ b/kubernetes/apps/games/minecraft/app/helmrelease.yaml
@@ -122,7 +122,7 @@ spec:
               RCON_PASSWORD:
                 valueFrom:
                   secretKeyRef:
-                    name: minecraft
+                    name: minecraft-rcon
                     key: rcon_password
               ENABLE_QUERY: "true"
               # Whitelist / Ops
