chore: generate secrets (#1770)

--- a/kubernetes/apps/games/minecraft/app/secret.yaml
+++ b/kubernetes/apps/games/minecraft/app/secret.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ${APP}-dragonfly
+  name: minecraft-rcon
   labels:
     v1.secret.runo.rocks/managed: "true"
   annotations:
-    v1.secret.runo.rocks/generate-0: password
-    v1.secret.runo.rocks/length-0: "64"
+    v1.secret.runo.rocks/generate-0: rcon_password
+    v1.secret.runo.rocks/length-0: "32"
     v1.secret.runo.rocks/pattern-0: "[a-zA-Z0-9]"
 type: Opaque
 data: {}
