Revert "chore: generate secrets (#1770)"
This reverts commit 90f76aef42295db1d8d57f7f8ec532610deb3305.

--- a/kubernetes/apps/games/minecraft/app/helmrelease.yaml
+++ b/kubernetes/apps/games/minecraft/app/helmrelease.yaml
@@ -122,7 +122,7 @@ spec:
               RCON_PASSWORD:
                 valueFrom:
                   secretKeyRef:
-                    name: minecraft-rcon
+                    name: minecraft
                     key: rcon_password
               ENABLE_QUERY: "true"
               # Whitelist / Ops
