--- a/kubernetes/flux/components/dragonfly/secret.yaml
+++ b/kubernetes/flux/components/dragonfly/secret.yaml
@@ -8,6 +8,6 @@ metadata:
   annotations:
     v1.secret.runo.rocks/generate-0: password
     v1.secret.runo.rocks/length-0: "64"
-    v1.secret.runo.rocks/pattern-0: "[a-zA-Z0-9]"
+    v1.secret.runo.rocks/pattern-${ID}: "[a-zA-Z0-9]"
 type: Opaque
 data: {}
