--- a/kubernetes/core/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/core/security/authelia/app/helmrelease.yaml
@@ -80,6 +80,9 @@ spec:
             image:
               repository: ghcr.io/authelia/authelia
               tag: 4.39.13@sha256:7adc2a95b6a4be9332f6a420fdf59c7031bff203d1046ab80d8fbd66f5b1095f
+            envFrom: # TODO: Move to file secrets
+              - secretRef:
+                  name: *app
 
             env:
               AUTHELIA_LOG_LEVEL: info
