Revert "chore: generate secrets (#1770)"
This reverts commit 90f76aef42295db1d8d57f7f8ec532610deb3305.

--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
 
     controllers:
       romm:
+        replicas: 0
         defaultContainerOptions:
           securityContext:
             allowPrivilegeEscalation: false
