chore(recyclarr): update config

--- a/.mise.toml
+++ b/.mise.toml
@@ -53,3 +53,4 @@ yamlfmt = "0.17.2"
 "pipx:yamllint" = "1.37.1"
 actionlint = "1.7.8"
 "npm:prettier" = "3.6.2"
+"ubi:recyclarr/recyclarr" = "v7.4.1"
