--- a/.mise.toml
+++ b/.mise.toml
@@ -41,6 +41,7 @@ task = "3.44.0"
 "ubi:gorcon/rcon-cli" = { version = "0.10.3", exe = "rcon" }
 slsa-verifier = "2.7.1"
 cosign = "2.6.1"
+hurl = "7.0.0"
 
 # hk
 hk = "1.19.0"
@@ -53,4 +54,4 @@ yamlfmt = "0.19.0"
 "pipx:yamllint" = "1.37.1"
 actionlint = "1.7.8"
 "npm:prettier" = "3.6.2"
-"ubi:recyclarr/recyclarr" = "v7.4.1"
+shellcheck = "0.11.0"
