feat!: scheduling gates (#1793)

--- a/kubernetes/apps/downloads/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/recyclarr/app/helmrelease.yaml
@@ -65,6 +65,24 @@ spec:
 
         pod:
           restartPolicy: Never
+          annotations:
+            k8s.ksgate.org/sonarr: |
+              {
+                "apiVersion": "apps/v1",
+                "kind": "Deployment",
+                "name": "sonarr",
+                "expression": "resource.status.updatedReplicas >= 1"
+              }
+            k8s.ksgate.org/radarr: |
+              {
+                "apiVersion": "apps/v1",
+                "kind": "Deployment",
+                "name": "radarr",
+                "expression": "resource.status.updatedReplicas >= 1"
+              }
+          schedulingGates:
+            - name: k8s.ksgate.org/radarr
+            - name: k8s.ksgate.org/sonarr
 
         cronjob:
           schedule: "@daily"
