--- a/kubernetes/core/system/ksgate/app/helmrelease.yaml
+++ b/kubernetes/core/system/ksgate/app/helmrelease.yaml
@@ -26,6 +26,6 @@ spec:
   values:
     conditionResources:
       apiGroups:
-        - "apps/v1"
+        - "apps"
       resources:
-        - "Deployment"
+        - "deployments"
