--- a/kubernetes/apps/selfhosted/homepage/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/homepage/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
           app:
             image:
               repository: ghcr.io/gethomepage/homepage
-              tag: v1.5.0
+              tag: v1.5.0@sha256:5b2f4a3b303902ae9c5191d1b2b56f6533cb9b804accb3e56397c91124d0efca
             probes:
               startup:
                 enabled: true
