--- a/nas/stacks/jellyfin/docker-compose.yaml
+++ b/nas/stacks/jellyfin/docker-compose.yaml
@@ -25,11 +25,11 @@ services:
       - "8096:8096/tcp"
       - "8920:8920/tcp"
     restart: always
-    healthcheck:
-      test: curl --fail http://localhost:8096/health || exit 1
-      interval: 10s
-      timeout: 1s
-      retries: 3
+    # healthcheck:
+    #   test: curl --fail http://localhost:8096/health || exit 1
+    #   interval: 10s
+    #   timeout: 1s
+    #   retries: 3
     user: 1001:100
     devices:
       - /dev/dri/renderD128:/dev/dri/renderD128
