fix(flux): cancel health checks on new kustomization revisions

--- a/kubernetes/core/flux-system/flux-operator/instance/values.yaml
+++ b/kubernetes/core/flux-system/flux-operator/instance/values.yaml
@@ -2,7 +2,7 @@
 instance:
   distribution:
     # renovate: datasource=github-releases depName=controlplaneio-fluxcd/distribution
-    version: 2.6.1
+    version: 2.7.2
   cluster:
     networkPolicy: true
   components:
@@ -19,9 +19,8 @@ instance:
 
   kustomize:
     patches:
-      # Increase the number of workers and limits
-      # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#increase-the-number-of-workers-and-limits
-      - patch: |
+      - # Increase the number of workers
+        patch: |-
           - op: add
             path: /spec/template/spec/containers/0/args/-
             value: --concurrent=10
@@ -31,8 +30,8 @@ instance:
         target:
           kind: Deployment
           name: (kustomize-controller|helm-controller|source-controller)
-      # Increase the memory limits
-      - patch: |
+      - # Increase the memory limits
+        patch: |-
           apiVersion: apps/v1
           kind: Deployment
           metadata:
@@ -48,8 +47,8 @@ instance:
         target:
           kind: Deployment
           name: (kustomize-controller|helm-controller|source-controller)
-      # Enable in-memory kustomize builds
-      - patch: |
+      - # Enable in-memory kustomize builds
+        patch: |-
           - op: add
             path: /spec/template/spec/containers/0/args/-
             value: --concurrent=20
@@ -62,8 +61,8 @@ instance:
         target:
           kind: Deployment
           name: kustomize-controller
-      # Enable Helm repositories caching
-      - patch: |
+      - # Enable Helm repositories caching
+        patch: |-
           - op: add
             path: /spec/template/spec/containers/0/args/-
             value: --helm-cache-max-size=10
@@ -76,8 +75,8 @@ instance:
         target:
           kind: Deployment
           name: source-controller
-      # Flux near OOM detection for Helm
-      - patch: |
+      - # Flux near OOM detection for Helm
+        patch: |-
           - op: add
             path: /spec/template/spec/containers/0/args/-
             value: --feature-gates=OOMWatch=true
@@ -90,11 +89,27 @@ instance:
         target:
           kind: Deployment
           name: helm-controller
-      # Disable chart digest tracking
-      - patch: |
+      - # Disable chart digest tracking
+        patch: |-
           - op: add
             path: /spec/template/spec/containers/0/args/-
             value: --feature-gates=DisableChartDigestTracking=true
         target:
           kind: Deployment
           name: helm-controller
+      - # Watch configmaps and secrets attached to HelmReleases and Kustomizations
+        patch: |-
+          - op: add
+            path: /spec/template/spec/containers/0/args/-
+            value: --watch-configs-label-selector=owner!=helm
+        target:
+          kind: Deployment
+          name: (helm-controller|kustomize-controller)
+      - # Cancel health checks on new Kustomizations revisions
+        patch: |-
+          - op: add
+            path: /spec/template/spec/containers/0/args/-
+            value: --feature-gates=CancelHealthCheckOnNewRevision=true
+        target:
+          kind: Deployment
+          name: kustomize-controller
